# opengate

./: .gitignore
core/: setup.py
core/opengate_core/: opengate_core.cpp
core/opengate_core/opengate_lib/: GateGANPairSource.cpp  GateGANSource.cpp  GateGenericSource.cpp  GateGenericSource.h  GateKillActor.cpp  GateKillActor.h  GatePencilBeamSource.cpp  GatePhaseSpaceSource.cpp  GatePhaseSpaceSource.h
core/opengate_core/opengate_lib/digitizer/: GateDigitizerAdderActor.cpp  GateDigitizerAdderActor.h  GateDigitizerBlurringActor.cpp  GateDigitizerBlurringActor.h  GateDigitizerEfficiencyActor.cpp  GateDigitizerEfficiencyActor.h  GateDigitizerReadoutActor.cpp  GateDigitizerReadoutActor.h  GateDigitizerSpatialBlurringActor.cpp  GateDigitizerSpatialBlurringActor.h  GateVDigitizerWithOutputActor.cpp  GateVDigitizerWithOutputActor.h
gam_g4/gam_g4/: gam_g4.cpp
gam_g4/gam_g4/gam_lib/: GamImageBox.cpp  GamImageBox.h  pyGamImageBox.cpp
gam_gate/geometry/: ImageVolume.py  helpers_geometry.py
gam_tests/src/: test009_voxels_visu.py
opengate/actor/: KillActor.py  helpers_actor.py
opengate/mac/: default_visu_commands_vrml.mac
opengate/source/: GenericSource.py
opengate/tests/src/: test019_linac_phsp_helpers.py  test062_kill_actor_MT.py
opengate/tests/src/test_visu/visu_g4/: CMakeLists.txt  DetectorConstruction.cc  exampleB1.cc  vis.mac
opengate/tests/src/test_visu/visu_g4_pybind/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  binding.cpp  exampleB2.py
